--- a/src/views/Main/Main.css
+++ b/src/views/Main/Main.css
@@ -3,6 +3,7 @@
     height: 100vh;
     background-color: orange;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -11,6 +12,8 @@
     border-radius: 50%;
     height: 750px;
     width: 750px;
+    /* height: 80%;
+    width: calc(height); */
     background-color: #111111;
     display: flex;
     flex-wrap: wrap;
@@ -137,4 +140,49 @@
 .count {
     font-size: 4.5rem;
     color: #111111;
+}
+
+.button-container {
+    display: flex;
+    gap: 30px;
+    margin-top: 15px;
+    align-content: center;
+    justify-content: center;
+}
+
+.control-buttons {
+    width: 100px;
+    height: 55px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    font-size: 2rem;
+    /* text-align: center; */
+    cursor: pointer;
+    padding-top: 5px;
+    border: none;
+}
+
+.start-button {
+    background-color: var(--dim-green);
+}
+
+.start-button:hover {
+    background-color: var(--bright-green);
+}
+
+.start-button:active {
+    background-color: var(--press-green);
+}
+
+.reset-button {
+    background-color: var(--dim-red);
+}
+
+.reset-button:hover {
+    background-color: var(--bright-red);
+}
+
+.reset-button:active {
+    background-color: var(--press-red);
 }
