--- a/client/src/views/Simon/Simon.css
+++ b/client/src/views/Simon/Simon.css
@@ -11,8 +11,11 @@
 
 .simon-body {
   border-radius: 50%;
-  height: 750px;
-  width: 750px;
+  /* height: 48rem; */
+  height: 80%;
+  aspect-ratio: 1/1;
+
+  /* width: 750px; */
   background-color: #111111;
   display: flex;
   flex-wrap: wrap;
@@ -24,10 +27,14 @@
 }
 
 .game-button {
-  min-height: 325px;
+  min-height: 42%;
+  max-width: 42%;
+  max-height: 42%;
+  min-width: 42%;
+  /* min-height: 325px;
   max-width: 325px;
   max-height: 325px;
-  min-width: 325px;
+  min-width: 325px; */
   z-index: 1;
   cursor: pointer;
 }
@@ -117,12 +124,13 @@
 }
 
 .center {
-  position: fixed;
+  position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  height: 300px;
-  width: 300px;
+  height: 32%;
+  aspect-ratio: 1/1;
+  /* width: 40%; */
   border-radius: 50%;
   background-color: #111111;
   z-index: 2;
@@ -134,7 +142,7 @@
 }
 
 .simon_logo {
-  width: 250px;
+  width: 80%;
 }
 
 .title {
@@ -150,17 +158,19 @@
   gap: 10px;
   align-items: center;
   justify-content: center;
-  padding-top: 1rem;
+  padding-top: 10%;
+  height: 24%;
 }
 
 .score-label {
+  font-size: 200%;
   color: var(--bright-red);
 }
 
 .score-counter {
   background-color: white;
-  height: 4rem;
-  width: 100px;
+  height: 160%;
+  aspect-ratio: 1.55/1;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -168,7 +178,7 @@
 }
 
 .count {
-  font-size: 4rem;
+  font-size: 320%;
   color: #111111;
 }
 
@@ -180,6 +190,7 @@
   gap: 1rem;
   position: fixed;
   left: 0;
+  bottom: 5px;
   padding-bottom: 3rem;
   padding-left: 3rem;
 }
