--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Megrim&family=Silkscreen:wght@400;700&family=Unica+One&family=VT323&family=Walter+Turncoat&display=swap");
+
 :root {
   --dim-red: #ff000080;
   --dim-yellow: #ffff0080;
@@ -11,16 +13,37 @@
   --press-yellow: #ffff80;
   --press-blue: #b7b7ff;
   --press-green: #80ff80;
+
+  --walter-turncoat-regular: "Walter Turncoat";
+  --megrim-regular: "Megrim";
+  --silkscreen-regular: "Silkscreen";
+  --unica-one-regular: "Unica One";
+  --vt323-regular: "VT323";
 }
+
+/* 
+
+
+.silkscreen-bold {
+  font-family: "Silkscreen", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+*/
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   caret-color: transparent;
+  font-family: var(--unica-one-regular), sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-body{
+body {
+  margin-top: 50px;
   width: 100%;
   height: 100vh;
 }
