--- a/client/src/views/Simon/Simon.css
+++ b/client/src/views/Simon/Simon.css
@@ -140,7 +140,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-top: 1.5em;
 }
 
 .simon_logo {
@@ -157,15 +156,16 @@
 
 .score-container {
   display: flex;
-  gap: 10px;
+  gap: 7%;
   align-items: center;
   justify-content: center;
   padding-top: 10%;
   height: 24%;
+  margin-top: 3%;
 }
 
 .score-label {
-  font-size: 3vh;
+  font-size: 4.5vh;
   color: var(--bright-red);
 }
 
@@ -176,12 +176,13 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 0 0.5em 0.5em 0.5em;
+  padding: 0 3% 3% 3%;
+  /* padding: 0 0.5em 0.5em 0.5em; */
   border-radius: 5px;
 }
 
 .count {
-  font-size: 4.5vh;
+  font-size: 5.5vh;
   color: #111111;
 }
 
