--- a/client/src/views/Users/Authenticate.css
+++ b/client/src/views/Users/Authenticate.css
@@ -10,7 +10,7 @@
 
 .authForm,
 .autoForm {
-  width: 25%;
+  /* width: 25%; */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -33,11 +33,16 @@
 }
 
 .formItem {
-  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   gap: 5px;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .small {
@@ -71,6 +76,7 @@
 .sign_in {
   cursor: pointer;
   background-color: var(--bright-green);
+  color: var(--bright-yellow);
 }
 
 .sign_in:hover {
@@ -101,12 +107,10 @@
 
 .return_user:hover {
   background-color: var(--press-red);
-  color: var(--bright-blue);
 }
 
 .return_user:active {
   background-color: var(--dim-red);
-  color: var(--bright-blue);
 }
 
 .create_player {
@@ -117,12 +121,10 @@
 
 .create_player:hover {
   background-color: var(--dim-yellow);
-  color: var(--bright-blue);
 }
 
 .create_player:active {
   background-color: var(--press-yellow);
-  color: var(--bright-blue);
 }
 
 .simonLogo {
