signin and signup menus are more dialed in, the nav at the top is laidout, additional High_Scores link has been added, but there is no route yet. just linkes to #, simon logo has been added to the top left corner

--- a/client/src/components/Layout/Header/Header.css
+++ b/client/src/components/Layout/Header/Header.css
@@ -6,4 +6,11 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.simon-style {
+  width: 150px;
 }
