--- a/client/src/components/Layout/Header/Header.css
+++ b/client/src/components/Layout/Header/Header.css
@@ -6,7 +6,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
