--- a/client/src/views/Simon/Simon.css
+++ b/client/src/views/Simon/Simon.css
@@ -1,18 +1,19 @@
 .mainSection {
   min-width: 100%;
-  height: 100vh;
+  height: calc(100vh - 50px);
   background-color: orange;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: fixed;
+  top: 20px;
 }
 
 .simon-body {
   border-radius: 50%;
   /* height: 48rem; */
-  height: 80%;
+  height: 90%;
   aspect-ratio: 1/1;
 
   /* width: 750px; */
@@ -27,8 +28,8 @@
 }
 
 .game-button {
-  height: 42%;
-  width: 42%;
+  height: 43%;
+  width: 43%;
   /* min-height: 42%;
   max-width: 42%;
   max-height: 42%;
@@ -130,7 +131,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  height: 32%;
+  height: 38%;
   aspect-ratio: 1/1;
   /* width: 40%; */
   border-radius: 50%;
@@ -143,6 +144,7 @@
 }
 
 .simon_logo {
+  margin-top: 10%;
   width: 80%;
 }
 
@@ -158,25 +160,26 @@
   display: flex;
   gap: 7%;
   align-items: center;
-  justify-content: center;
-  padding-top: 10%;
-  height: 24%;
-  margin-top: 3%;
+  justify-content: flex-end;
+  padding-top: 0%;
+  height: 20%;
+  width: 75%;
+  margin-top: 05%;
 }
 
 .score-label {
-  font-size: 4.5vh;
+  font-size: 3.5vh;
   color: var(--bright-red);
 }
 
 .score-counter {
   background-color: white;
-  height: 160%;
+  height: 80%;
   aspect-ratio: 1.55/1;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 0 3% 3% 3%;
+  padding: 3% 3% 3% 3%;
   /* padding: 0 0.5em 0.5em 0.5em; */
   border-radius: 5px;
 }
@@ -234,4 +237,14 @@
 
 .reset-button:active {
   background-color: var(--press-red);
+}
+
+.gameOverContainer {
+  height: 80%;
+  aspect-ratio: 1/1;
+  background-color: fuchsia;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 50%;
 }
