--- a/client/src/views/Users/Authenticate.css
+++ b/client/src/views/Users/Authenticate.css
@@ -65,11 +65,9 @@
   padding: 5px 8px;
   border-radius: 5px;
   width: auto;
-  margin-bottom: 10px;
   background-color: var(--dim-green);
   color: orange;
   border: none;
-  margin-bottom: 15px;
   width: 100px;
 }
 
@@ -136,5 +134,6 @@
   width: 260px;
   height: 20px;
   display: flex;
-  transform: translate(15px, 0px);
+  justify-content: center;
+  transform: translate(0px, 0px);
 }
