--- a/client/src/views/HighScores/HighScores.css
+++ b/client/src/views/HighScores/HighScores.css
@@ -1,1 +1,60 @@
 /* HighScores.css */
+
+.topScoresSection {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.topScoresContainer {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.scoresTitle {
+  font-size: 3em;
+  font-weight: 900;
+}
+
+.scoreRow {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 5px 20px;
+}
+
+.scoreRow:nth-child(odd) {
+  background-color: var(--bright-yellow);
+  color: orange;
+}
+
+.topScoreName,
+.topScorePoints {
+  font-size: 2em;
+  font-weight: 900;
+}
+
+.scoreRow:first-of-type {
+  border-top: 4px solid;
+
+  border-image: linear-gradient(
+    to right,
+    var(--bright-green) 0%,
+    var(--bright-green) 25%,
+    var(--bright-red) 25%,
+    var(--bright-red) 50%,
+    var(--bright-yellow) 50%,
+    var(--bright-yellow) 75%,
+    var(--bright-blue) 75%,
+    var(--bright-blue) 100%
+  );
+  border-image-slice: 1;
+  padding-top: 15px;
+  margin-top: 15px;
+}
