--- a/client/src/views/Simon/GameOver.css
+++ b/client/src/views/Simon/GameOver.css
@@ -8,10 +8,24 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  border-top: 6px solid;
+
+  border-image: linear-gradient(
+    to right,
+    var(--bright-green) 0%,
+    var(--bright-green) 25%,
+    var(--bright-red) 25%,
+    var(--bright-red) 50%,
+    var(--bright-yellow) 50%,
+    var(--bright-yellow) 75%,
+    var(--bright-blue) 75%,
+    var(--bright-blue) 100%
+  );
+  border-image-slice: 1;
 }
 
 .gameOver {
-  font-size: 1200%;
+  font-size: 12vh;
   font-weight: 900;
   color: var(--bright-green);
   padding-bottom: 3%;
@@ -32,7 +46,7 @@
 }
 
 .yourScore {
-  font-size: 500%;
+  font-size: 6vh;
   color: var(--bright-green);
 }
 
